--- a/winch/Cargo.toml
+++ b/winch/Cargo.toml
@@ -20,6 +20,7 @@ anyhow = { workspace = true }
 wasmparser = { workspace = true }
 clap = { workspace = true }
 wat = { workspace = true }
+capstone = "0.9.0"
 
 [features]
 default = ["all-arch"]
