--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,7 +97,8 @@ members = [
   "examples/tokio/wasm",
   "fuzz",
   "winch",
-  "winch/codegen"
+  "winch/codegen",
+  "winch/environ",
 ]
 exclude = [
   'crates/wasi-common/WASI/tools/witx-cli',
@@ -157,6 +158,7 @@ cranelift-bforest = { path = "cranelift/bforest", version = "0.94.0" }
 cranelift = { path = "cranelift/umbrella", version = "0.94.0" }
 
 winch-codegen = { path = "winch/codegen", version = "=0.5.0" }
+winch-environ = { path = "winch/environ", version = "=0.5.0" }
 winch-filetests = { path = "winch/filetests" }
 winch-test-macros = { path = "winch/test-macros" }
 
